convert/objects/sf_devops__Source_Member_Reference__c.object
<CustomObject>
    <description>A reference in the DevOps Center to a SourceMember that exists on the remote development environment.</description>
    <label>Source Member Reference</label>
    <nameField>
        <displayFormat>SMR-{000000}</displayFormat>
        <label>Source Member Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source Member References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>sf_devops__Is_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if this source member represents a delete.</description>
        <label>Is Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Is_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if this source member represents an add.</description>
        <label>Is New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Remote_Change__c</fullName>
        <description>A reference to the RemoteChange we are associated with.</description>
        <label>Remote Change</label>
        <referenceTo>sf_devops__Remote_Change__c</referenceTo>
        <relationshipName>Source_Member_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__Revision_Counter__c</fullName>
        <description>The revision counter of this source member reference.</description>
        <label>Revision Counter</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf_devops__Source_Member_Id__c</fullName>
        <description>The ID of the source member object on the remote environment.</description>
        <label>Source Member Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>